<resources>
    <string name="app_name">JARA_DreamFairy</string>
    <string name="prompt_email">이메일</string>
    <string name="prompt_password">패스워드</string>
    <string name="prompt_password_again">패스워드 확인</string>
    <string name="prompt_email_signup">이메일 (형식에 맞춰서)</string>
    <string name="prompt_password_signup">패스워드 (8자리 이상)</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_up">회원가입</string>
    <string name="back">이전</string>
    <string name="title_activity_social">social</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>